src/objects/Access_Request_Community__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Customer_Support__c</fullName>
        <label>Customer Support</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Implementation_Team__c</fullName>
        <label>Implementation Team</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_Team__c</fullName>
        <label>Partner Team</label>
        <type>Email</type>
    </fields>
    <label>Access Request - Community</label>
</CustomObject>